# webilder

./: .gitignore  AUTHORS  COPYING  ChangeLog  MANIFEST.in  Makefile.am  NEWS  README  build_dep.py  configure.ac  gen_webilder_pot.sh  setup.py
autostart/: webilder_indicator.desktop
debian/: changelog  control  copyright  rules  watch  webilder.mime  webilder.sharedmimeinfo
desktop/: kwebilder.desktop  webilder_desktop.desktop  webilder_indicator.desktop
locale/: webilder.pot
locale/fr/: webilder.po
locale/it/: webilder.po
manpages/: WebilderApplet.pod  wbz_handler.pod  webilder_applet.pod  webilder_desktop.pod  webilder_downloader.pod
scripts/: WebilderApplet  kwebilder  wbz_handler  webilder_desktop  webilder_downloader
servers/: GNOME_WebilderApplet.server.in  Makefile.am  indicator-webilder.desktop.in
src/: AboutDialog.py  DownloadDialog.py  KWebilder.py  Makefile.am  WebilderApplet.py  WebilderDesktop.py  WebilderFullscreen.py  __init__.py  base_applet.py  config.py  config_dialog.py  downloader.py  kwebilder.py  plugins.py  progress_dialog.py  test.py  thumblist.py  thumbs.py  uitricks.py  wbz_handler.py  webilder_globals.py  webilder_globals.py.in  webilder_gnome_applet.py
src/flickr/: __init__.py  flickrapi.py
src/webilder/: AboutDialog.py  DownloadDialog.py  WebilderDesktop.py  WebilderFullscreen.py  __init__.py  base_applet.py  config.py  config_dialog.py  downloader.py  infofile.py  plugins.py  progress_dialog.py  thumbs.py  uitricks.py  wbz_handler.py  webilder_globals.py.in  webilder_gnome_applet.py  webilder_unity_indicator.py
src/webilder/Webilder.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
src/webilder/flickr/: __init__.py  flickrapi.py
src/webilder/locale/: webilder.pot
src/webilder/locale/zh_TW/LC_MESSAGES/: webilder.po
src/webilder/ui/: camera16.xpm  config.glade  config.ui  webilder.glade  webilder.ui  webilder_desktop.glade  webilder_desktop.ui
src/webilder/webshots/: __init__.py  fileutil.py  utils.py  wbp.py  wbz.py
src/webshots/: __init__.py  utils.py  wbp.py  wbz.py
ui/: Makefile.am  config.glade  webilder.glade  webilder_desktop.glade
